# music_chronus

./: .env.windows  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Engine_Parameters.json  Makefile  NEXT_SESSION_PLAN.md  OSC_QUICK_REFERENCE.md  README.md  TEAM.md  WINDOWS_SETUP.md  anthem_breakbeat_174.py  anthem_breakbeat_8voice.py  audio_engine.py  check_schema.py  chronus_song_acid_dreams.py  chronus_song_progressive_darkness.py  chronusctl.py  current_schema.txt  engine_pyo.py  install_ghcup.sh  install_superdirt.scd  install_superdirt.sh  live_music.py  minimal_superdirt.scd  music_lab.py  osc_control.py  pyproject.toml  record_session.py  requirements-dev.txt  requirements.txt  requirements_pyo.txt  run_supervisor_router.py  send_osc_test.py  sequencer_pyo_integrated.py  setup_pulseaudio_wsl.sh  sprint.md  start_music_final.sh  start_music_pulseaudio.sh  (+48 more)
.claude/: settings.local.json
compositions/: digital_dreams.py
docs/: COMPREHENSIVE_TEST_REVIEW.md  GITHUB_README_FRAMEWORK.md  MANUAL_TEST_GUIDE.md  PHASE_3_VISION.md  PROJECT_ORGANIZATION_PLAN.md  PROJECT_VISION.md  TECHNICAL.md  architecture_decision_multiprocessing_final.md  architecture_decision_worker_pools.md  architecture_finding_numpy_gil_release.md  architecture_slot_failover.md  cp2_integration_research.md  cp3_after_action_report.md  cp3_anchored_scheduling_report.md  cp3_deadline_fix_report.md  cp3_final_status_report.md  cp3_latest_wins_implementation_report.md  cp3_prime_fix_implementation.md  cp3_prime_implementation_plan.md  cp3_prime_implementation_report.md  cp3_prime_research_findings.md  (+38 more)
(+360 files in other folders)
